<resources>
    <string name="app_name">Shop Manager</string>

    <string name="email_field">Email</string>
    <string name="password_Field">Password</string>
    <string name="name_field">Shop Name</string>

    <string name="register_button">Register</string>
    <string name="logon_button">Login</string>

    <string name="product_name_field">Name</string>
    <string name="product_id_field">ID</string>
    <string name="product_quantity_field">Current Quantity</string>
    <string name="product_shelf_field">Shelf Number</string>
    <string name="add_product_button">Add Product</string>

    <string name="update_product_button">Update Product</string>

    <string name="add_product_success">Successfully added product.</string>
    <string name="add_product_failure">Failed to add product. Check your connection or for duplicate IDs.</string>
    <string name="add_product_id_exists">Product ID already exists.</string>
    <string name="add_product_empty_field">Please validate the fields.</string>

    <string name="update_product_success">Successfully updated product.</string>
    <string name="update_product_failure">Failed to update product.</string>

    <string name="edit_product_button">Edit</string>
    <string name="delete_product_button">Delete</string>

    <string name="login_fail">Login Failed</string>
    <string name="register_fail">Registration Failed</string>

</resources>