<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activities.Register">

    <EditText
        android:id="@+id/userFieldReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:ems="15"
        android:hint="@string/email_field"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordFieldReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:ems="15"
        android:hint="@string/password_Field"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/shopFieldReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:ems="15"
        android:hint="@string/name_field"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/registerAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:background="@drawable/action_button"
        android:onClick="register"
        android:text="@string/register_button"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/registerNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_fail"
        android:textAlignment="center"
        android:textColor="@color/failure"
        android:visibility="gone" />
</LinearLayout>