<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.EditProduct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:labelFor="@id/productNameField"
            android:text="@string/product_name_field"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/productNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:labelFor="@id/productShelfField"
            android:text="@string/product_shelf_field"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/productShelfField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:labelFor="@id/productQuantityField"
            android:text="@string/product_quantity_field"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/productQuantityField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number" />

        <Button
            android:id="@+id/addProductButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:background="@drawable/action_button"
            android:backgroundTint="@color/submit"
            android:onClick="updateProduct"
            android:text="@string/update_product_button" />

        <TextView
            android:id="@+id/productNotificationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>